<resources>
    <string name="app_name" translatable="false">MoveShare</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="Logo" translatable="false">Logo</string>
    <string name="login_information" translatable="false">login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_login">Sign in</string>
    <string name="no_account">New here? Sign up</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_register" translatable="false">RegisterActivity</string>
    <string name="action_register">Sign up</string>
    <string name="prompt_name">Name</string>
    <string name="title_activity_home" translatable="false">HomeActivity</string>
    <string name="title_activity_scrolling" translatable="false">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="group">Group</string>
    <string name="title_activity_groups" translatable="false">GroupsActivity</string>
    <string name="title_activity_group" translatable="false">GroupActivity</string>
    <string name="name_group">Name group</string>
    <string name="user_email">User email</string>
    <string name="data_to_share">Data to share</string>
    <string name="driving_label">Driving</string>
    <string name="location_label">Location</string>
    <string name="destination_label">Destination</string>
    <string name="start_time_label">Start time</string>
    <string name="images_label">Frontal images</string>
    <string name="call_accept_label">Accept calls</string>
    <string name="parking_label">Looking for parking</string>
    <string name="save_label">Save</string>
    <string name="welcome">Welcome</string>
    <string name="users_added">Added users</string>
    <string name="user_added">User added</string>
    <string name="add_users_group">Add users to group</string>
    <string name="show_users_groups">Show users in group</string>
    <string name="email_added">This email was added</string>
    <string name="title_activity_view_user_activiy" translatable="false">ViewUserActiviy</string>
    <string name="refresh_label">Refresh</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="driving_label_2">Driving:</string>
    <string name="driverInformation">Driver information</string>
    <string name="location_label_2">Location:</string>
    <string name="destination_label_2">Destination:</string>
    <string name="startTime_label_2">Start time:</string>
    <string name="acceptCalls_label_2">Accept calls:</string>
    <string name="parking_label_2">Looking for parking:</string>
    <string name="users">users in group</string>
    <string name="yes">Yes</string>
    <string name="no" translatable="false">No</string>
    <string name="edit_title">Edit group</string>
    <string name="create_group">Create group</string>
    <string name="cancel">Cancel</string>
    <string name="remove">Remove</string>
    <string name="user_required_error">At least one user is required</string>
    <string name="title_activity_driving" translatable="false">DrivingActivity</string>
    <string name="on_driving">Activate/Deactivate driving mode</string>
    <string name="driving_title">Driving mode</string>
    <string name="driving_mode_on_attempt">The driving mode is going to be activated, remember that your data will be shared with the groups that you have configured, are you sure you want to activate the driving mode?</string>
    <string name="driving_mode_off_attempt">Are you sure you want to deactivate the driving mode? It will stop sharing data.</string>
    <string name="call">Make a call</string>
    <string name="say_call">Say \"Call to\"</string>
    <string name="contact_name_label">Contact name\"</string>
    <string name="message">Send a \nmessage</string>
    <string name="say_message">Say \"Message to\"</string>
    <string name="actions_label">Actions</string>
    <string name="change_data">Change information</string>
    <string name="change_destination">Destination</string>
    <string name="say_destination">Say \"Destination\"</string>
    <string name="change_parking">Looking for \nparking</string>
    <string name="say_parking">Say \"Parking\"</string>
    <string name="actualInformation">Actual information</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general" translatable="false">General</string>

    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>


    <string name="pref_title_location_sync_frequency">Location sync frequency</string>
    <string-array name="pref_location_sync_frequency_titles">
        <item>5 segundos</item>
        <item>10 segundos</item>
        <item>30 segundos</item>
        <item>1 minuto</item>
        <item>2 minutos</item>
    </string-array>
    <string-array name="pref_location_sync_frequency_values">
        <item>5</item>
        <item>10</item>
        <item>30</item>
        <item>60</item>
        <item>120</item>
    </string-array>
    <!--Imagenes-->
    <string name="pref_title_image_sync_frequency">Image sync frequency</string>

    <string-array name="pref_sync_frequency_titles">
        <item>1 minuto</item>
        <item>5 minutos</item>
        <item>10 minutos</item>
        <item>15 minutos</item>
        <item>30 minutos</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>1</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>30</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings" translatable="false">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_user_driving_notifications">User driving notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent" translatable="false">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="logout_title">Logout</string>
    <string name="bad_login">Bad login</string>
    <string name="groups">Groups</string>
    <string name="no_connection">Check your internet connection.</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="error_message_password">The password is incorrect</string>
    <string name="error_message_email">This email doesn\'t exists</string>
    <string name="error_message_disabled">This account have been disabled</string>
    <string name="error_message_email_in_use">This email is already in use by another account</string>
    <string name="send_email">Send</string>
    <string name="error_send_email">Error on send recovery email</string>
    <string name="email_sent">Recovery mail sent. Follow the mail instructions to recover your password</string>
    <string name="recover_password_title">Recover password</string>
    <string name="deleted_group">Group deleted</string>
    <string name="undo">Undo</string>
    <string name="title_activity_view_users" translatable="false">ViewUsersActivity</string>
    <string name="view_users">View users</string>
    <string name="unknownInformation">Unknown</string>
    <string name="estimated_time">Estimated time:</string>
    <string name="unknownTime" translatable="false">--:--</string>
    <string name="sharingData">Sharing data on background</string>
    <string name="finish">Finish</string>
    <string name="gps_disabled">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="driving_notification">Sharing data on background</string>
    <string name="image">Image</string>
    <string name="pref_title_led" translatable="false">LED</string>
    <string name="driving_now">is driving now!</string>
    <string name="tap_to_view">Tap top view</string>
    <string name="no_groups_title">Missing users</string>
    <string name="no_groups_message">Driving mode will not be activated because there are no groups and users to share.</string>
    <string name="location_time">Time:</string>
    <string name="location_info">Location information</string>
    <string name="weather_label">Weather:</string>
    <string name="exit_message">Are you sure you want to exit? You will lose all your changes</string>
    <string name="exit_title">Discard changes</string>
    <string name="image_taken">Your Picture has been taken !</string>
    <string name="deleted_group_driving">Finish driving mode before performing the action</string>
    <string name="destinationCommand">destination</string>
    <string name="callsCommand">calls</string>
    <string name="parkingCommand">parking</string>
    <string name="change_calls">Accept \ncalls</string>
    <string name="say_calls">Say \"Calls\"</string>
    <string name="callToCommand">call to</string>
    <string name="messageCommand">message to</string>
    <string name="pref_title_voice">Voice recognition</string>
</resources>
