<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="5"
        android:entries="@array/pref_location_sync_frequency_titles"
        android:entryValues="@array/pref_location_sync_frequency_values"
        android:key="location_sync"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_location_sync_frequency" />

    <ListPreference
        android:defaultValue="1"
        android:entries="@array/pref_sync_frequency_titles"
        android:entryValues="@array/pref_sync_frequency_values"
        android:key="image_sync"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_image_sync_frequency" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="voice_recognition"
        android:title="@string/pref_title_voice" />
</PreferenceScreen>
