<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/actions_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/dialog_holo_dark_frame"
            android:padding="@dimen/activity_horizontal_margin">
            <TextView
                android:id="@+id/actions_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_below="@+id/layout_user"
                android:text="@string/actions_label"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />
            <RelativeLayout
                android:layout_width="wrap_content"
                android:id="@+id/call_layout"
                android:layout_below="@+id/actions_label"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/iconCall"
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:background="@android:drawable/stat_sys_phone_call"
                    android:backgroundTint="#00d500" />

                <TextView
                    android:id="@+id/call_label_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="17dp"
                    android:layout_marginStart="17dp"
                    android:layout_toEndOf="@+id/iconCall"
                    android:layout_toRightOf="@+id/iconCall"
                    android:text="@string/call"
                    android:textColor="#FFF"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/call_label_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="@string/say_call"
                    android:textColor="#FFF"
                    android:textSize="14sp"
                    android:textStyle="italic" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:id="@+id/message_layout"
                android:layout_below="@+id/call_layout"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iconMessage"
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:background="@android:drawable/sym_action_chat"
                    android:backgroundTint="#FFF" />

                <TextView
                    android:id="@+id/message_label_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="17dp"
                    android:layout_marginStart="17dp"
                    android:layout_toEndOf="@+id/iconMessage"
                    android:layout_toRightOf="@+id/iconMessage"
                    android:text="@string/message"
                    android:textColor="#FFF"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/message_label_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="@string/say_message"
                    android:textColor="#FFF"
                    android:textSize="14sp"
                    android:textStyle="italic" />
            </RelativeLayout>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/change_data_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/actions_layout"
            android:background="@android:drawable/dialog_holo_dark_frame"
            android:padding="@dimen/activity_horizontal_margin">
            <TextView
                android:id="@+id/change_data_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_below="@+id/layout_user"
                android:text="@string/change_data"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />
            <RelativeLayout
                android:layout_width="wrap_content"
                android:id="@+id/change_destination_layout"
                android:layout_below="@+id/change_data_label"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/iconDestination"
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:background="@mipmap/destination_icon"
                    android:backgroundTint="#FFF" />

                <TextView
                    android:id="@+id/change_destination_label_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="17dp"
                    android:layout_marginStart="17dp"
                    android:layout_toEndOf="@+id/iconDestination"
                    android:layout_toRightOf="@+id/iconDestination"
                    android:text="@string/change_destination"
                    android:minLines="2"
                    android:textColor="#FFF"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/change_destination_label_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="@string/say_destination"
                    android:textColor="#FFF"
                    android:textSize="14sp"
                    android:textStyle="italic" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:id="@+id/change_parking_layout"
                android:layout_below="@+id/change_destination_layout"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/iconParking"
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:background="@mipmap/parking_icon"
                    android:backgroundTint="#FFF" />

                <TextView
                    android:id="@+id/change_parking_label_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="17dp"
                    android:layout_marginStart="17dp"
                    android:layout_toEndOf="@+id/iconParking"
                    android:layout_toRightOf="@+id/iconParking"
                    android:text="@string/change_parking"
                    android:minLines="2"
                    android:textColor="#FFF"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/change_parking_label_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="@string/say_parking"
                    android:textColor="#FFF"
                    android:textSize="14sp"
                    android:textStyle="italic" />
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>
</ScrollView>